layout bugfixes

--- a/src/esperanto/AdminBundle/Resources/public/css/theme.css
+++ b/src/esperanto/AdminBundle/Resources/public/css/theme.css
@@ -218,7 +218,7 @@ img {max-width:100%;}
 }
 
 .small-dialog {
-    width: 500px;
+    width: 465px;
 }
 
 
